--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -55,7 +55,8 @@ span.invisible {left:-9999em;display:block;}
 .sprite {padding:2px 0 0 18px;}
 .sprite-after {padding: 2px 18px 0 0;}
 
-/* Override the .yui-picker-results style, so that the next icon
+/* XXX: EdwinGrubbs 2009-07-27 bug=405476
+ * Override the .yui-picker-results style, so that the next icon
  * in the sprite file won't appear for tall list items.
  */
 .yui-picker-results li.sprite {
