Added a leading 0 to the decimal length because Martin likes them that way.

--- a/lib/canonical/launchpad/icing/style-3-0.css
+++ b/lib/canonical/launchpad/icing/style-3-0.css
@@ -192,14 +192,14 @@ div.columns div.right div.portlet {
 .footer {
     margin-top: 2em;
     border-top: 1px solid #cdd3dd;
-    padding-top: .5em;
+    padding-top: 0.5em;
     }
 .portlet, .aside {
     border-top: 1px solid #d6d6d6;
-    padding: .5em 0;
+    padding: 0.5em 0;
     }
 .top-portlet {
-    padding: 0 0 .5em 0;
+    padding: 0 0 0.5em 0;
     margin: 0 0 1em;
     }
 
@@ -242,16 +242,16 @@ h1 {
     clear: none;
     padding-top: 6px; /* An offset from the logo. */
     font-size: 197%;
-    margin-bottom: .5em; /* 2.0 backward compatability */
+    margin-bottom: 0.5em; /* 2.0 backward compatability */
     }
 h2 {
-    margin-bottom: .3em;
+    margin-bottom: 0.3em;
     font-size: 123.1%;
     color: #5a5a5a;
     }
 p {
     width: auto;
-    margin-bottom: .8em;
+    margin-bottom: 0.8em;
     }
 p, li, dt, dd, blockquote {
     max-width: 45em; /* Wrap the text before the eye gets lost. */
@@ -317,7 +317,7 @@ span.see-all {
     margin: 0 5px 0 0;
     }
 .registered {
-    margin-top: -.5em; /* 2.0 backward compatability */
+    margin-top: -0.5em; /* 2.0 backward compatability */
     font-size: 85%;
     color: #666;
     font-style: italic;
@@ -328,6 +328,12 @@ span.see-all {
     }
 
 /* Common list presentations. */
+.bulleted {
+    margin-bottom: 0.5em;
+    }
+.bulleted li {
+    margin: auto auto 0.2em 2em;
+    list-style-type: disc;
 .horizontal li {
     display: inline;
     padding: 0 1.5em 0 0;
@@ -340,13 +346,13 @@ span.see-all {
     width: 48%;
     float: left;
     display: inline;
-    margin: 0 0.25em .75em 0;
+    margin: 0 0.25em 0.75em 0;
     }
 .portlet dt {
     font-weight: bold;
     }
 .portlet dd {
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
     font-size: 85%;
     color: #484848;
     }
@@ -364,7 +370,7 @@ span.see-all {
 
 /* Side content exceptions */
 .side {
-    padding: .5em;
+    padding: 0.5em;
     color: #484848;
     background: #f3f3f3;
     }
@@ -375,7 +381,7 @@ span.see-all {
     -moz-border-radius: 3%;
     -webkit-border-radius: 3%;
     border-radius: 3%;
-    padding: .5em;
+    padding: 0.5em;
     color: #484848;
     background: #fbfbfb;
     }
@@ -408,9 +414,9 @@ span.see-all {
     text-decoration: underline;
     }
 .downloads .released {
-    margin: 0 0 .5em 0;
+    margin: 0 0 0.5em 0;
     background: #f3f3f3 url(../images/bg-project-released.gif) right bottom no-repeat;
-    padding: .4em .2em;
+    padding: 0.4em 0.2em;
     font-size: 85%;
     font-weight: normal;
     text-align: right;
@@ -427,7 +433,7 @@ span.see-all {
     }
 .involvement a {
     display: block;
-    padding: .3em;
+    padding: 0.3em;
     }
 .involvement a.bugs {
     color: #b9413e;
@@ -452,14 +458,14 @@ span.see-all {
 
 .announcements li {
     font-size: 85%;
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
     }
 .announcements li strong,
 .announcements li a {
     font-weight: bold;
     }
 .latest-announcement {
-    padding: .5em;
+    padding: 0.5em;
     background: #dfe5f6;
     border-top: 1px solid #d0d0d0;
     border-bottom: 1px solid #d0d0d0;
