--- a/lib/canonical/launchpad/icing/style-3-0.css
+++ b/lib/canonical/launchpad/icing/style-3-0.css
@@ -334,6 +334,7 @@ span.see-all {
 .bulleted li {
     margin: auto auto 0.2em 2em;
     list-style-type: disc;
+    }
 .horizontal li {
     display: inline;
     padding: 0 1.5em 0 0;
