--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -394,6 +394,7 @@ dd .whiteboard {
 /* === Forms === */
 
 form {border: 0; margin: 0; padding: 0;}
+form table label {font-weight: bold;}
 fieldset {border-width: 2px 0 0; margin: 1em 0; padding: 1em 0 0;}
 input[type="text"], input[type="search"], input[type="password"], textarea {
   font-family: sans-serif;
