--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -132,6 +132,8 @@ span.invisible {left:-9999em;display:block;}
 .zoom-in {background:url(icon-sprites-2) 0 -1056px no-repeat;}
 .zoom-out {background:url(icon-sprites-2) 0 -1088px no-repeat;}
 .arquitecture {background:url(icon-sprites-2) 0 -1120px no-repeat;}
+.ppa-icon {background:url(icon-sprites-2) 0 -1147px no-repeat;}
+.ppa-icon-inactive {background:url(icon-sprites-2) 0 -1171px no-repeat;}
 
 .bug-status-expand {background:url(icon-sprites-3) 0 -10px no-repeat;}
 .merge-proposal {background:url(icon-sprites-3) 0 -46px no-repeat;}
@@ -152,8 +154,6 @@ span.invisible {left:-9999em;display:block;}
 .greenbar {background:url(icon-sprites-3) 0 -446px repeat-x;}
 .purplebar {background:url(icon-sprites-3) 0 -476px repeat-x;}
 .favorite-yes {background:url(icon-sprites-3) 0 -530px no-repeat;}
-.ppa-icon {background:url(icon-sprites-3) 0 -548px no-repeat;}
-.ppa-icon-inactive {background:url(icon-sprites-3) 0 -568px no-repeat;}
 
 /*large*/
 .large-branch {background:url(icon-sprites-large) 0 0 no-repeat;}
@@ -1835,9 +1835,15 @@ form.archive-subscription-activation button:hover {
     text-decoration: underline;
 }
 
+/* Disabled PPAs when linkified (uploaders) should be gray and when not
+   linkified should be lined-through. */
+a.ppa-icon-inactive {
+    color: gray;
+}
 span.ppa-icon-inactive {
     text-decoration: line-through;
 }
+
 
 /* --- Code --- */
 
