Ensure text of the first location tab aligns with the heading above.

--- a/lib/canonical/launchpad/icing/style-3-0.css
+++ b/lib/canonical/launchpad/icing/style-3-0.css
@@ -396,6 +396,9 @@ div.location-portlet h1 {
 }
 .location-portlet li a {
     padding: 0.3em 0.5em;
+    /* Ensure the text of the first location tab is aligned with the
+       heading above. */
+    margin-left: -0.5em; 
 }
 .location-portlet li a:link, .location-portlet li a:visited {
     color: #000;
