Revised the layout to hide holes created by optional content.

--- a/lib/canonical/launchpad/icing/style-3-0.css
+++ b/lib/canonical/launchpad/icing/style-3-0.css
@@ -202,6 +202,7 @@ div.columns div.right div.portlet {
     padding-top: 0.5em;
     }
 .portlet, .aside {
+    clear: both;
     border-top: 1px solid #d6d6d6;
     padding: 0.5em 0;
     }
