--- a/lib/canonical/launchpad/icing/style-3-0.css
+++ b/lib/canonical/launchpad/icing/style-3-0.css
@@ -192,9 +192,6 @@ div.columns div.right div.portlet {
     width: auto;
     margin-right: 24%;
     }
-.first .yui-u {
-    float: left;
-}
 .footer {
     clear: both;
     margin-top: 2em;
@@ -367,6 +364,13 @@ span.see-all {
     display: inline;
     margin: 0 0.25em 0.75em 0;
     }
+.two-column-list:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
 .portlet dt {
     font-weight: bold;
     }
