icing.css change to ensure images that are linked to help pop-ups are never given the dotted underline.

--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -148,6 +148,9 @@ a.help {
   border-bottom: 1px dotted #03a;
   cursor: help;
 }
+a.help img {
+  border-bottom: 0px;
+}
 a.help:hover, a.help:hover {
   text-decoration: none;
 }
